--- a/NEXTGROUND/index.html
+++ b/NEXTGROUND/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/font.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="SCSS/style.css">
+    <link rel="stylesheet" href="css/font.css">
     <title>NEXTGROUND</title>
 </head>
 <body>
@@ -23,6 +23,9 @@
             <div>
                 <p>지원하기</p>
                 <p>로그인</p>
+            </div>
+            <div class="menu-bar">
+                <i class="fa-solid fa-bars-staggered"></i>
             </div>
         </nav>
         <section id="banner">
@@ -251,7 +254,7 @@
         <div class="notice-left">
             <p class="section-title"><span>공지사항. </span><br>부트캠프 일정 및 상담 소식을 확인하세요.</p>
             <p>더 보기 +</p>
-            <img src="images/notice.png" alt="알림 아이콘">
+            <img src="images/notice.png">
         </div>
         <div class="notice-right">
              <div class="notice-content">
