--- a/LOGGER/index.html
+++ b/LOGGER/index.html
@@ -15,6 +15,15 @@
   </head>
   <body>
     <header>
+      <nav>
+        <h1>LOGGER</h1>
+        <ul>
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="contents.html">CONTENTS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="notice.html">NOTICE</a></li>
+        </ul>
+      </nav>
       <div id="head">
         <p>LOGGER</p>
         <p>☁ミ✲ A fun life log ⋰˚✩</p>
@@ -77,7 +86,7 @@
           그때는 알지 못했던 다양한 즐거움이 보일 것입니다.
         </p>
         <p class="button_style" style="color: #fff">
-          자세한 설정 방법 살펴보기 ＞
+          라이프로그 살펴보기 ＞
         </p>
       </div>
     </section>
