--- a/pinterest/index.html
+++ b/pinterest/index.html
@@ -6,6 +6,7 @@
   <title>HelloKitty</title>
   <link rel="stylesheet" href="CSS/reset.css">
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/sakura.css">
 </head>
 <body>
   <header>
@@ -34,5 +35,9 @@
 
   <script src="script/data.js"></script>
   <script src="script/script.js"></script>
+  <script src="script/sakura.js"></script>
+  <script>
+    var sakura = new Sakura('main');
+  </script>
 </body>
 </html>
