--- a/WORDGAME/index.html
+++ b/WORDGAME/index.html
@@ -13,7 +13,7 @@
     <!-- ************ 시작 페이지 *************** -->
     <div id="start-wrap">
       <div id="start">
-        <img src="images/logo.png" alt="로고">
+        <img src="images/logo.svg" alt="로고">
         <p>제한 시간 1분 안에 당신의 실력을 보여주세요!
         <div id="start-box">
           <input type="text" id="start-input" placeholder="시작 단어를 입력해 주세요">
@@ -26,7 +26,7 @@
     <!-- ************ 게임 페이지 *************** -->
     <div id="game">
       <div id="header">
-        <img src="images/header-logo.png" alt="header-logo">
+        <img src="images/header-logo.svg" alt="header-logo">
         <div class="score-wrap">
           <p>score</p>
           <h2 class="score"></h2>
@@ -48,7 +48,7 @@
     <!-- ***************** 결과 **************** -->
     <div id="result-wrap" style="display: none">
       <div id="result-screen">
-          <img src="images/result-logo.png" alt="결과화면 로고">
+          <img src="images/result-logo.svg" alt="결과화면 로고">
           <p>당신의 점수</p>
           <p class="result"><span id="final-score">15</span>점</p>
         </div>
