--- a/WORDGAME/index.html
+++ b/WORDGAME/index.html
@@ -14,7 +14,7 @@
     <div id="start-wrap">
       <div id="start">
         <img src="images/logo.svg" alt="로고">
-        <p>제한 시간 1분 안에 당신의 실력을 보여주세요!
+        <p>제한 시간 1분 안에 당신의 실력을 보여주세요!</p>
         <div id="start-box">
           <input type="text" id="start-input" placeholder="시작 단어를 입력해 주세요">
           <button id="start-btn">게임 시작 <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></button>
@@ -48,7 +48,7 @@
     <!-- ***************** 결과 **************** -->
     <div id="result-wrap" style="display: none">
       <div id="result-screen">
-          <img src="images/result-logo.svg" alt="결과화면 로고">
+          <img src="images/result-logo2.svg" alt="결과화면 로고">
           <p>당신의 점수</p>
           <p class="result"><span id="final-score">15</span>점</p>
         </div>
