--- a/WORDGAME/index.html
+++ b/WORDGAME/index.html
@@ -22,6 +22,14 @@
       </div>
       <p id="footer">ⓒhy2_s</p>
     </div>
+    <!-- ************ 단어 미입력 시 팝업 ************* -->
+    <div class="popup" style="display: none">
+      <div class="popup-box">
+        <h2>단어를 입력하세요</h2>
+        <button class="popup-btn">확인</button>
+      </div>
+    </div>
+
 
     <!-- ************ 게임 페이지 *************** -->
     <div id="game">
@@ -45,6 +53,7 @@
         </div>
       </div>
     </div>
+
     <!-- ***************** 결과 **************** -->
     <div id="result-wrap" style="display: none">
       <div id="result-screen">
