--- a/blueproject/index.html
+++ b/blueproject/index.html
@@ -131,8 +131,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
         <li class="item">
@@ -171,8 +171,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
         <li class="item">
@@ -211,8 +211,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
       </ul>
@@ -256,8 +256,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
         <li class="item">
@@ -296,8 +296,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
         <li class="item">
@@ -336,8 +336,8 @@
             </li>
           </ul>
           <div class="btn">
-            <p>SITE VIEW</p>
-            <p>GITHUB LINK</p>
+            <p><i class="fa-solid fa-magnifying-glass"></i>&nbsp; SITE VIEW</p>
+            <p><i class="fa-brands fa-github"></i>&nbsp; GITHUB LINK</p>
           </div>
         </li>
       </ul>
@@ -510,5 +510,6 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
   <!-- <script src="script/pc.js"></script> -->
+  <script src="script/common.js"></script>
 </body>
 </html>
