--- a/WORDGAME/index.html
+++ b/WORDGAME/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>끝말잇기d</title>
+  <title>끝말잇기</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square-round.css" rel="stylesheet">
   <link rel="stylesheet" href="CSS/style.css">
 </head>
-<body> 
+<body>
   <div id="wrap">
     <!-- ************ 시작 페이지 *************** -->
     <div id="start-wrap">
@@ -22,6 +22,14 @@
       </div>
       <p id="footer">ⓒhy2_s</p>
     </div>
+    <!-- ************ 단어 미입력 시 팝업 ************* -->
+    <div class="popup" style="display: none">
+      <div class="popup-box">
+        <h2>단어를 입력하세요</h2>
+        <button class="popup-btn">확인</button>
+      </div>
+    </div>
+
 
     <!-- ************ 게임 페이지 *************** -->
     <div id="game">
@@ -45,10 +53,11 @@
         </div>
       </div>
     </div>
+
     <!-- ***************** 결과 **************** -->
     <div id="result-wrap" style="display: none">
       <div id="result-screen">
-          <img src="images/result-logo.svg" alt="결과화면 로고">
+          <img src="images/result-logo2.svg" alt="결과화면 로고">
           <p>당신의 점수</p>
           <p class="result"><span id="final-score">15</span>점</p>
         </div>
