--- a/blueproject/index.html
+++ b/blueproject/index.html
@@ -496,11 +496,11 @@
         <ul class="links">
           <li>
             <a href="mailTo:rlagptmd1021@naver.com">
-              <i class="fa-solid fa-envelope"></i> rlagptmd1021@naver.com</a>
+              <i class="fa-solid fa-envelope"></i>&nbsp;&nbsp; rlagptmd1021@naver.com</a>
           </li>
           <li>
             <a href="https://github.com/hy2s/hy2s.github.io">
-              <i class="fa-brands fa-github"></i> GitHub</a>
+              <i class="fa-brands fa-github"></i>&nbsp;&nbsp; GitHub</a>
           </li>
         </ul>
       </div>
@@ -509,7 +509,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
-  <!-- <script src="script/pc.js"></script> -->
+  
   <script src="script/common.js"></script>
 </body>
 </html>
